# autotest_data

./: .gitignore  LICENSE  Makefile  README.md  credentials.ini.example  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: tests.yml
notebooks/: eda.ipynb
src/autotest_data/: helper_functions.py  load_data.py  vectorize_data.py
tests/: conftest.py  test_load_data.py  test_vectorize_data.py
