[metadata]
name = autotest_data
description = verify your data pipeline
author = Adam Blomberg
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    autotest_data
install_requires =
    requests>=2
    psycopg2>=2.9
    pandas>=1.3
    scikit-learn>1
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
autotest_data = py.typed

[flake8]
max-line-length = 160